packages/astro/e2e/fixtures/errors/src/pages/preact-runtime-error.astro
---
import PreactRuntimeError from '../components/preact/PreactRuntimeError.jsx';
---

<div>
  <PreactRuntimeError />
</div>
